--- a/yolov5-tflite-android/app/src/main/res/layout/activity_main.xml
+++ b/yolov5-tflite-android/app/src/main/res/layout/activity_main.xml
@@ -28,8 +28,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -38,102 +37,43 @@
         app:layout_constraintLeft_toLeftOf="parent">
 
         <TextView
-            android:id="@+id/inference"
+            android:id="@+id/result_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
+            android:textSize="23dp"
             android:layout_marginStart="5dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="60dp"
             android:textColor="#FFFFFF"
-            android:text="inference time: " />
+            android:text="Result : " />
 
         <TextView
-            android:id="@+id/inference_time"
+            android:id="@+id/result"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="20dp"
-            android:text="xx ms"
-            android:textColor="#FFFFFF" />
-
-        <TextView
-            android:id="@+id/frame"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/inference"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            android:textColor="#FFFFFF"
-            android:text="Frame size: " />
+            android:textSize="20dp"
+            android:layout_marginStart="100dp"
+            android:layout_marginBottom="60dp"
+            android:textColor="#F80000"
+            android:text="9C" />
 
-        <TextView
-            android:id="@+id/frame_size"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/inference_time"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
-            android:text="heigth x width"
-            android:textColor="#FFFFFF" />
-
-
-        <TextView
-            android:id="@+id/immersive_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/frame"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="5dp"
-            android:layout_marginBottom="5dp"
-            android:textColor="#FFFFFF"
-            android:text="immersive: " />
 
         <Switch
-            android:id="@+id/immersive"
+            android:id="@+id/camera_switch"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textOn="on"
             android:textOff="off"
-            app:layout_constraintBottom_toTopOf="@id/frame_size"
+            android:textOn="on"
             app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp"
             tools:ignore="UseSwitchCompatOrMaterialXml" />
-
-        <TextView
-            android:id="@+id/model_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/immersive_name"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginStart="5dp"
-            android:layout_marginBottom="5dp"
-            android:textColor="#FFFFFF"
-            android:text="model: " />
-
-        <Spinner
-            android:id="@+id/model"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toTopOf="@id/immersive"
-            app:layout_constraintRight_toRightOf="parent"
-            android:background="#00000000"
-            android:entries="@array/model"
-            android:padding="0dp"
-            android:gravity="right"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text=""
-            app:layout_constraintBottom_toTopOf="@id/model_name"
             app:layout_constraintLeft_toLeftOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
